# RavnOS

./: Cargo.toml  README.md
.github/: FUNDING.yml
Documentation/: FEATURES.md  ISSUES.md  PARTS.md  ROADMAP.md
Documentation/manual/: rune.md
docs/manual/: huginn.md  rune.md
libconfarg/: Cargo.toml
libconfarg/src/: lib.rs
libfile/: Cargo.toml
libfile/src/: lib.rs
libstream/: Cargo.toml
libstream/src/: lib.rs
ls/: Cargo.toml
ls/src/: main.rs
search/: Cargo.toml
search/src/: main.rs
show/: Cargo.toml
show/src/: main.rs
source_code/: Cargo.toml  build.sh
source_code/huginn/: Cargo.toml
source_code/huginn/src/: main.rs
source_code/kernel/: Cargo.toml  README.md  build.sh  kernel8.img  mmu-scheduler.ai
source_code/kernel/documentation/: 1-boot.md
source_code/kernel/firmware/raspberry_pi-4/: bcm2711-rpi-4-b.dtb  config.txt
source_code/kernel/firmware/raspberry_pi-5/: bcm2712-rpi-5-b.dtb  config.txt  start4.elf
source_code/kernel/src/: cpu.rs  critical_section_impl.rs  driver.rs  main.rs  panic_wait.rs  synchronization.rs
source_code/kernel/src/bsp/: device_driver.rs  drivers_interface.rs  mod.rs  raspberrypi.rs
source_code/kernel/src/bsp/device_driver/bcm/: bcm2xxx_gpio.rs  bcm2xxx_pl011_uart.rs
source_code/kernel/src/bsp/drivers/: gpio.rs  mod.rs  pl011.rs
source_code/kernel/src/bsp/qemu/: cpu.rs
source_code/kernel/src/bsp/raspberrypi/: console.rs  cpu.rs  driver.rs  dtb.rs  interrupt_controller.rs  kernel.ld  memory.rs  mod.rs
source_code/kernel/src/bsp/raspberrypi4b/drivers/: gpio.rs  mod.rs
source_code/kernel/src/bsp/raspberrypi5/drivers/: mod.rs  uart.rs
source_code/kernel/src/console/: mod.rs
source_code/kernel/src/cpu/: boot.rs  boot.s  kernel_threads.rs  mod.rs  process.rs  scheduler.rs  userdebug_threads.rs
source_code/kernel/src/memory/: mmu.rs  mod.rs  page_allocator.rs
source_code/libcommand/: Cargo.toml
source_code/libcommand/src/: lib.rs
source_code/libconfarg/: Cargo.toml
source_code/libconfarg/src/: lib.rs
source_code/libfile/: Cargo.toml
source_code/libfile/src/: lib.rs
source_code/libstream/: Cargo.toml
source_code/libstream/src/: lib.rs
source_code/ls/: Cargo.toml
source_code/ls/src/: main.rs
source_code/rune/: Cargo.toml
source_code/rune/src/: builtins.rs  history.rs  io_mods.rs  main.rs
source_code/search/: Cargo.toml
source_code/search/src/: main.rs
source_code/show/: Cargo.toml
source_code/show/src/: main.rs
