[package]
name = "ravnos_kernel"
version = "0.1.0"
authors = ["Joaquin 'ShyanJMC' Crespo <shyan@shyanjmc.com>"]
edition = "2021"

[features]
default = []
bsp_rpi4 = ["tock-registers"]
bsp_rpi5 = ["tock-registers"]
bsp_qemu = ["tock-registers"]
qemu_psci = []
tock-registers = ["dep:tock-registers"]

##--------------------------------------------------------------------------------------------------
## Dependencies
##--------------------------------------------------------------------------------------------------

[dependencies]
aarch64-cpu = "10.0.0"
embedded-alloc = "0.6.0"
critical-section = "1"
#tock-registers = { version = "0.8.x", default-features = false, features = ["register_types"], optional = true }
tock-registers = { version = "0.9.0", features = ["register_types"], optional = true }
fdt = "0.1.5"
