[package]
name = "libconfarg"
version = "0.4.2"
edition = "2021"
readme = "../README.md"
license = "GPL-3.0"
description = "A library to check binary's arguments and configurations"
authors = ["Joaquin 'ShyanJMC' Crespo <shyan@shyanjmc.com>"]
homepage = "https://shyanjmc.com"
documentation = "https://shyanjmc.com/ravnos"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
