[package]
name = "rune"
version = "0.46.26"
edition = "2021"
readme = "../README.md"
license = "GPL-3.0"
description = "RavnOS shell"
authors = ["Joaquin 'ShyanJMC' Crespo <shyan@shyanjmc.com>"]
homepage = "https://shyanjmc.com"
documentation = "https://shyanjmc.com/ravnos"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libconfarg = { path = "../libconfarg" }
libstream = { path = "../libstream" }
libfile = { path = "../libfile"}
